<resources>
    <string name="app_name">Foodie</string>
    <string name="facebook_app_id">290984818086469</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="reenter_new_password">Re-Enter New Password</string>
    <string name="password">Password</string>
    <string name="register_this_account">"Don't have an account?"</string>
    <string name="create_an_account">"Create an account with the new mobile number"</string>
    <string name="by_creating_an_account">"By creating an account, I accept the "</string>
    <string name="terms_and_conditions">"Terms and Conditions"</string>
    <string name="let_impress_you">"Let's impress you with our dishes"</string>
    <string name="hundred_restaurant">"100 Restaurants"</string>
    <string name="discover">"Discover"</string>
    <string name="relevance">"Relevance"</string>
    <string name="offers_near_you">"Offers Near You"</string>
    <string name="sign_up">Register here</string>
    <string name="forgot">Forgot</string>
    <string name="filter">Filter</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="manage_address">Manage Address</string>
    <string name="payment">Payment</string>
    <string name="add_new_card">Add New Card</string>
    <string name="set_delivery_location">Set Delivery Location</string>
    <string name="search_place">"Search for area, street name…"</string>
    <string name="change_password">"Change Password"</string>
    <string name="favourites">"Favourites"</string>
    <string name="filters">"Filters"</string>
    <string name="reset">"Reset"</string>
    <string name="edit_account">"Edit Account"</string>
    <string name="address">"Address"</string>
    <string name="restaurant">"Sangeetha"</string>
    <string name="current_location">"Current Location"</string>
    <string name="dish">"Dish"</string>
    <string name="connection_unavailable">"Connection Unavailable"</string>
    <string name="check_your_internet_connection">"Uh oh! Check your internet connection and restart the app"</string>
    <string name="open_settings">"Open Settings"</string>
    <string name="home">"Home"</string>
    <string name="work">"Work"</string>
    <string name="office">"Office"</string>
    <string name="other">"Other"</string>
    <string name="save">"Save"</string>
    <string name="saved_addresses">"Saved Addresses"</string>
    <string name="save_and_proceed">"Save and Proceed"</string>
    <string name="edit">"Edit"</string>
    <string name="delete">"Delete"</string>
    <string name="delete_confirm">"Do you really want to delete?"</string>
    <string name="orders">"Orders"</string>
    <string name="apply_filter">"Apply Filter"</string>
    <string name="large_text">
        "Material is the metaphor.\n"
        
        
        "seams, divides space, and indicates moving parts."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="getting_address">"Getting Address"</string>
    <string name="fresh">F r e s h</string>
    <string name="fresh_description">Discover new dishes everyday and hold your favourite restaurant</string>
    <string name="signin">Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="search">S e a r c h</string>
    <string name="search_description">View menus, photos and reviews for restaurants around you</string>
    <string name="bookmark">B o o k m a r k</string>
    <string name="bookmark_description">Add places you want to visit in the future to your bookmark</string>
    <string name="mob_no">Mobile Number</string>
    <string name="login_password">Password</string>
    <string name="already_you_have_account">Already you have an account?</string>
    <string name="signin_here">SIGN IN here</string>
    <string name="dot_line">.............................................................................................................................................................................................................................................................................................</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="verification_code_txt">Verification Code</string>
    <string name="continue_txt">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="register">Register</string>
    <string name="cart_error_title">Good food is always getting cooked</string>
    <string name="cart_error_description">Please order the dishes</string>
    <string name="add_address_to_proceed">Add address to proceed</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="add_address">Add Address</string>
    <string name="change_address">Change Address</string>
    <string name="old_password">Old Password</string>
    <string name="select_address">Select Address</string>
    <string name="submit">Submit</string>
    <string name="enter_secret_key">Enter your secret key</string>
    <string name="account">Account</string>
    <string name="login_or_sign_up_to_place_order">Login or Signup to place your order</string>
    <string name="please_login_and_order_dishes">Please login and order our dishes</string>
    <string name="manage_address_error_title">Knock Knock ! Who\'s there ?</string>
    <string name="manage_address_error_description">Saving address helps you check out faster</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="order_pickedup">Order Pickedup</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="description_1">We have received your order</string>
    <string name="description_2">Your order has been confirmed</string>
    <string name="description_3">We are preparing your order</string>
    <string name="description_4">Your order is already pickup</string>
    <string name="description_5">Your order is delivered successfully</string>
    <string name="order_delivered_successfully">Order Delivered Successfully</string>
    <string name="order_delivered_successfully_on">Order Delivered Successfully on </string>
    <string name="address_hint">Dad\'s place, John\'s Home</string>
    <string name="cancel">Cancel</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="card">CARD</string>
    <string name="pay_on_delivery">PAY ON DELIVERY</string>
    <string name="by_cash">By cash</string>
    <string name="walletHistory">WALLET</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="payment_options">Payment options</string>
    <string name="promotion_details">Promotion details</string>
    <string name="add_money">Add amount</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="pay">pay</string>
    <string name="promo_apply_text">Apply promo code to avail exciting offers</string>
    <string name="apply">Apply</string>
    <string name="promocode">Promocode</string>
    <string name="use_wallet">Use wallet</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="coming_soon">coming soon please check back shortly</string>
    <string name="google_login">Google Login</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="dispute">Dispute</string>
    <string name="dispute_created">Dispute Created</string>
    <string name="loading">Loading....</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="nonce">nonce</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="replace_cart_item">Replace cart item?</string>
    <string name="do_you_want_to_discart_the_selection_and_add_dishes_from_the_restaurant">Do you want to discard the selected dishes and add dishes from this restaurant</string>
    <string name="add_payments">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="add_card">Add card</string>
    <string name="okay">Okay</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="promo_code_apply_successfully">Promocode is applied and offer amount is added to your wallet.</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="password_and_confirm_password_doesnot_match">Password and confirm password doesn\'t match</string>
    <string name="profile_updated_successfully">Profile updated successfully.</string>
    <string name="network_error_toast">Something went wrong</string>
    <string name="add_ons">AddOns</string>
    <string name="custom_notes">Custom Notes</string>
    <string name="write_something">Write Something</string>
    <string name="product">Product</string>
    <string name="customize">Customize</string>
    <string name="your_previous_customization">Your previous customization</string>
    <string name="i_will_choose">I\'ll choose</string>
    <string name="repeat">Repeat</string>
    <string name="remove_item_from_cart">Remove item from cart</string>
    <string name="remove_item_from_cart_description">The item has multiple customiztaions added.Proceed to cart to remove item?</string>
    <string name="add_custom_notes">Add Custom Notes</string>
    <string name="featured_products">Featured Products</string>
    <string name="reorder_confirm_message">Your cart contains dishes from %1$s. Do you want to discard the selection and add dishes from %2$s ?</string>
    <string name="no_result">No Results</string>
    <string name="what_is_the_love">what is the love</string>
    <string name="fav_description">Once you favorite a restaurant, it will appear here.</string>
    <string name="close">Close</string>
    <string name="no_addons">No Addons</string>
    <string name="add_new_address">Add New Address</string>
</resources>