<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="150dp"
    android:id="@+id/bottom_sheet"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAllCaps="true"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="house/flat no"
            android:textAllCaps="true"
            android:textSize="@dimen/text_medium" />
        <EditText
            android:id="@+id/flat_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="landmark"
            android:textAllCaps="true"
            android:textSize="@dimen/text_medium" />
        <EditText
            android:id="@+id/landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/home"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/ic_work"
                android:text="@string/work"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/ic_pin_locator_1"
                android:text="@string/other"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:text="@string/save_and_proceed"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>