<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.foodie.app.activities.AccountPaymentActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f2f2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/walletHistory"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/button_corner_bg_theme"
                android:text="@string/add"
                android:textAllCaps="true"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/text_medium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="16dp">

            <TextView
                android:id="@+id/wallet_amount_txt_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet_amount"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_medium" />


            <TextView
                android:id="@+id/wallet_amount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="$150"
                android:textColor="@color/theme"
                android:textSize="@dimen/text_medium" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/history"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_medium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wallet_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>
