<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.foodie.app.activities.SignUpActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="25dp">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:contentDescription="@string/login"
                android:src="@drawable/logo_signin" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/shadow_view"
                android:drawableLeft="@drawable/login_left"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                app:theme="@style/MyEditTextTheme" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/shadow_view"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                app:theme="@style/MyEditTextTheme" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_size"
                    android:background="@drawable/shadow_view"
                    android:drawableLeft="@drawable/password_left"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10sdp"
                    android:singleLine="true"
                    app:theme="@style/MyEditTextTheme" />

                <ImageView
                    android:id="@+id/password_eye_img"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/ic_eye_open" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_size"
                    android:background="@drawable/shadow_view"
                    android:drawableLeft="@drawable/password_left"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10sdp"
                    android:singleLine="true"
                    app:theme="@style/MyEditTextTheme" />

                <ImageView
                    android:id="@+id/confirm_password_eye_img"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:src="@drawable/ic_eye_open" />

            </RelativeLayout>


            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/theme"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>