<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.foodie.app.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/let_impress_you"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/impressive_dishes_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/hundred_restaurant"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_down"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:text="@string/relevance"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryText" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/restaurants_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="#878787" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                android:text="@string/discover"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/discover_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="#878787" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/offers_near_you"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/restaurants_offer_rv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" />

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
